feat: update API URL and enhance user settings navigation with push notification handling

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_VAPID_PUBLIC_KEY=BKP4nVBVZ-m0ova4J_SNOggRWXBA73XiJoFjlWaut2YgefWq4QqMrJoa-GnS1QmBs6c0jtdijRd3yqU1wdGPmMY
-VITE_API_URL=http://0.0.0.0:4000
+VITE_API_URL=https://volunteers-backend-production.up.railway.app
