--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.7.0",
