--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.5.4",
     "vite": "^5.4.2",
     "vite-plugin-pwa": "^0.20.5",
+    "vite-plugin-svgr": "^4.5.0",
     "workbox-build": "^7.1.0",
     "workbox-core": "^7.4.0",
     "workbox-expiration": "^7.4.0",
